# innowise_laboratory

./: .gitignore
lecture_1/: main.py  pyproject.toml
lecture_2/: mini-profile.py
lecture_3/: grade-analyzer.py
lecture_4/: school.db  tasks.sql
lecture_5/: requirements.txt
lecture_5/book_api/: db.py  main.py  models.py  schemas.py
lecture_6/: Dockerfile  health-check.py
